--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.8.0"
   },
   "dependencies": {
+    "@material/material-color-utilities": "^0.2.0",
     "@pinia/nuxt": "^0.4.6"
   }
 }
