--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^9.6.0",
     "@vueuse/nuxt": "^9.6.0",
     "nuxt": "3.0.0",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.0"
   },
   "dependencies": {
