--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@types/jasmine": "^3.10.3",
+    "@types/node": "^18.7.17",
     "@vueuse/core": "^9.6.0",
     "@vueuse/nuxt": "^9.6.0",
+    "jasmine": "^4.0.2",
     "nuxt": "3.0.0",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.0"
   },
   "dependencies": {
     "@material/material-color-utilities": "^0.2.0",
-    "@pinia/nuxt": "^0.4.6"
+    "@pinia/nuxt": "^0.4.6",
+    "hex-rgb": "^5.0.0",
+    "install": "^0.13.0"
   }
 }
