--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jasmine": "^4.0.2",
     "nuxt": "3.0.0",
     "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.0",
+    "postcss-nesting": "^10.2.0",
     "prettier": "^2.8.0"
   },
   "dependencies": {
